--- a/hypertext.html
+++ b/hypertext.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="./fontawesome-free-6.2.0-web/css/all.min.css">
     <title>Hyper Text</title>
 </head>
 <body>
+    <div class="wrapper" id="hyper">
     <h2>What is HyperText</h2>
     <p>Hypertext is text which is not constrained to be linear.</p>
     <p>Hypertext is text which contains <a href="#">links </a>to other texts. The term was coined by
@@ -25,5 +26,6 @@
     <p>A newsgroup on hypertext, <a href="#">"alt.hypertext" </a>.</p>
     <p><a href="#">WorldWideWeb is a project </a>which uses hypertext concepts.</p>
     <p><a href="#">Standards</a>.</p>
+</div>
 </body>
 </html>
