--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
             <a href="#">History</a>
         <p>A summary of the history of the project.</p>
         </div>
+
+        <div class="flow-tit" id="four-vibe">
             <a href="#">How can I help </a>?
         <p>If you would like to support the web..</p>
+    </div>
+
+        <div class="flow-tit" id="four-vibe">
             <a href="#">Getting code</a>
         <p>Getting the code by <a href="#">anonymous FTP</a> , etc.</p>
+    </div>
     </div>
 </div>
     
