--- a/policy.html
+++ b/policy.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.2.0-web/css/all.min.css">
     <title>Policy</title>
 </head>
 <body>
+    <div class="wrapper">
     <h2>Policy</h2>
-    <p>This outlines the policy of the <a href="#">W3 project</a> at CERN. 
-        Whilst not legally binding, this attempts to explain my understanding of the CERN rules and the desires of the team at CERN.
+    <p>This outlines the policy of the <a href="./index.html">W3 project</a> at CERN. 
+        Whilst not legally binding, this attempts to explain my understanding of the 
+        CERN rules and the desires of the team at CERN.
     </p>
     <h3>Aim</h3>
-    <p>The basic aim of the project is to promote communication and information availability for the High Energy Physics (HEP) community. 
+    <p>The basic aim of the project is to promote communication and information 
+        availability for the High Energy Physics (HEP) community. 
         The project is based at CERN, whose budget is provided by
         <br>contributions of taxpayer's money from the European member states. It is in the interests of HEP, CERN, 
         and the project itself that it should interwork with systems and information in many other fields, and
@@ -25,5 +30,26 @@
         ports to be made to different environments, new browsers to be written, and additional data to be
     <br>incorporated into the "web". There have already been many contributions in these terms, 
     and also with hardware support from manufacturers.</p>
+    <p>If you may be interested in extending the web or the software, please mail or phone us.
+
+    </p>
+    <h3>Code distribution</h3>
+    <p>Code written at CERN is covered by the CERN copyright. In practice the interpretation of this in the case
+         of the W3 project is that the programs are freely available to academic bodies. To commercial
+        <br> organizations who are not reselling it, but are using it to participate in global information exchange, 
+        the charge is generally waived in order to cut administrative costs. Code is of course shared freely with all
+        <br> collaborators. Commercial organizations wishing to sell software based on W3 code should contact CERN.
+    </p>
+    <p>We are in the process of getting agreement to release certain parts of the WWW project code with the
+         General Public License (and GP Library License).</p>
+    <p>Where CERN code is included in otherwise public domain code, that CERN code becomes also public domain.
+    </p>
+    <p>Code not originating at CERN is of course covered by terms set by the copyright holder involved.</p>
+    <h3>Protocols and Data Formats
+    </h3>
+    <p>The definition of protocols such as <a href="#">HTTP</a> and data formats such as <a href="#">HTML</a> are in the public 
+        domain and may be freely used by anyone.<br>
+       <a href="#">Tim BL</a> </p>
+    </div>
 </body>
 </html>
