--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="two">
            <p>Everything there is online about W3 is linked directly or indirectly to this document,<br> including an
               <a href="./summary.html">executive summary </a> of the project, <a href="#">Mailing lists</a> ,
-              <a href="./policy.html">Policy</a> , November's <a href="#">W3 news </a>, <a href="#"> Frequently Asked Questions</a> .
+              <a href="./policy.html">Policy</a> , November's <a href="./news.html">W3 news </a>, <a href="#"> Frequently Asked Questions</a> .
            </p>
           </div>
        </div>
