--- a/news.html
+++ b/news.html
@@ -50,9 +50,25 @@
                     The binary is in ftp://info.cern.ch/pub/www/bin/next/WorldWideWeb_0.14.app.tar.Z</p>
             </div>
 
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
+            <h3>More and more hypertext on line</h3>
+            <div class="freestyle" id="repeat">
+                <p>New W3 servers have appeared at <a href="#">KVI</a> and at <a href="#">CWI</a> both in the Netherlands, <a href="#">IN2P3</a> in France, 
+                    and <a href="#">NCSA</a> in Illinois, <br>USA. KVI and IN2P3 are both High Energy Physics institites. 
+                    All the servers have local information as well as various other goodies.</p>
+            </div>
+            <div class="freestyle" id="repeat">
+                <p>CWI has a hypertext version of the Gnu documentation and of a guide to <a href="#">Audio formats</a> , <br>
+                    and NCSA has many things including hypertext documentation for the <a href="#">X-Collage</a> system. <br>
+                    Two CERN projects to produce online hypertext documentation recently are ADAMO and <a href="#">RD13</a>.</p>
+            </div>
+
+            <div class="freestyle" id="repeat">
+                <p>Meanwhile, <a href="#">Cornell Law school</a> have a server with hypertext of US Copyright Law... 
+                    as law tends to be mostly cross-reference <br>("as defined in Sect1.2.2.(a) above")
+                     hypertext makes a lot of sense here!</p>
+            </div>
+
+            <h3>Browse the WAIS servers</h3>
             <div class="freestyle" id="repeat"></div>
             <div class="freestyle" id="repeat"></div>
             <div class="freestyle" id="repeat"></div>
