--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1 style="padding-left: 300px;">World-Wide Web News <span>November 1992</span></h1>
+        <h2 style="padding-left: 300px;">World-Wide Web News <span>November 1992</span></h2>
 
         <div class="container">
 
@@ -69,11 +69,11 @@
             </div>
 
             <h3>Browse the WAIS servers</h3>
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
-            <div class="freestyle" id="repeat"></div>
+            <!-- <div class="freestyle" id="repeat"></div> -->
+            <!-- <div class="freestyle" id="repeat"></div> -->
+            <!-- <div class="freestyle" id="repeat"></div> -->
+            <!-- <div class="freestyle" id="repeat"></div> -->
+            <!-- <div class="freestyle" id="repeat"></div> -->
             
         </div>
     </div>
